# metools-monorepo

./: README.md
.github/workflows/: docker-publish-backend.yml  docker-publish-frontend.yml  docker-publish.yml
metools-backend/: .gitignore  .surrealdb  Cargo.toml  Dockerfile  Makefile  docker-compose.yaml  history.txt  rustfmt.toml
metools-backend/.github/workflows/: docker-publish.yml
metools-backend/.zed/: tasks.json
metools-backend/api/: swagger.json  swagger.yaml
metools-backend/migration/migrations/definitions/: _initial.json
metools-backend/migration/schemas/: rzd_tasks.surql  tokens.surql  users.surql  verify_tokens.surql
metools-backend/migrations/2024-02-22-231111_add_users_table/: down.sql  up.sql
metools-backend/migrations/2024-02-24-224316_create_users/: up.sql
metools-backend/migrations/2024-02-24-232903_create_users/: up.sql
metools-backend/migrations/2024-02-25-014218_add_rzd_tasks_table/: down.sql  up.sql
metools-backend/migrations/2024-03-03-005527_add_tokens_table/: up.sql
metools-backend/migrations/2024-06-12-162636_add_role_column_users_table/: up.sql
metools-backend/migrations/2024-06-12-163540_add_is_verified_column_users_table/: down.sql  up.sql
metools-backend/migrations/2024-06-14-232417_add_verify_tokens_table/: down.sql  up.sql
metools-backend/src/: config.rs  main.rs  schema.rs  utils.rs
metools-backend/src/controllers/: middlewares.rs  mod.rs  schema.rs  users.rs
metools-backend/src/controllers/rzd/: tasks.rs
metools-backend/src/controllers/users/: users.rs
metools-backend/src/models/: generic.rs  mod.rs  tasks.rs  users.rs  verify_tokens.rs
metools-backend/src/models/rzd/: tasks.rs
metools-backend/src/services/: mailer.rs  mod.rs  tasks.rs  users.rs
metools-backend/src/utils/: macros.rs  mod.rs  string.rs  thing.rs
metools-frontend/: Dockerfile  Makefile  app.vue  bun.lockb  nuxt.config.ts  package-lock.json  package.json
metools-frontend/openapi/me/: openapi.yaml
metools-frontend/pages/login/: index.vue
metools-frontend/server/: tsconfig.json
metools-frontend/src/: api.ts  myApi.ts
metools-frontend/src/api/: schemas.gen.ts  (+2 more)
metools-frontend/stores/: user.ts
metools_app/: README.md  pubspec.yaml
metools_app/lib/: oapi.dart
metools_app/linux/: CMakeLists.txt  my_application.cc
metools_app/test/: widget_test.dart
metools_app/web/: index.html  manifest.json
metools_app/windows/: CMakeLists.txt
(+11 files in other folders)
