[package]
name = "metools-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
diesel = { version = "2.1.4", features = ["postgres", "postgres_backend", "extras", "without-deprecated"]}
utoipa = { version = "4", features = ["actix_extras"] }
uuid = { version = "1.7.0", features = [] }
