[package]
name = "metools-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
diesel = { version = "2.1.4", features = ["postgres", "postgres_backend", "extras", "without-deprecated"]}
utoipa = { version = "4", features = ["actix_extras", "chrono", "time", "decimal", "uuid", "url", "openapi_extensions", "non_strict_integers"] }
uuid = { version = "1.7.0", features = ["default", "serde", "v4", "fast-rng"] }
serde = { version = "1.0.197", features = ["default"] }
serde_json = { version = "1.0.114", features = ["default"] }
serde_with = { version = "3.6.1", features = ["default"] }
chrono = { version = "0.4.34", features = ["default", "serde"] }
log = "0.4.20"
jsonwebtoken = "9.2.0"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
env_logger = { version = "0.11.2" }
validator = { version = "0.16.1", features = ["derive"] }
derive_more = { version = "0.99.17", features = ["default"] }
